WexGit/Wex_DX/force-app/main/default/objects/T_E_Program__c/fields/of_Cards__c.field-meta.xml
<CustomField>
    <fullName>of_Cards__c</fullName>
    <label># of Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>