WexGit/Wex_DX/force-app/main/default/objects/T_E_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>T&amp;E Programs</relationshipLabel>
    <relationshipName>T_E_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>