WexGit/Wex_DX/force-app/main/default/objects/T_E_Program__c/fields/Program_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Program_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Expiration</label>
    <type>Date</type>
</CustomField>