WexGit/Wex_DX/force-app/main/default/objects/T_E_Program__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>BofA</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>WEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>